// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndexResumeContainer Create IndexResumeContainer with {"items": [Array], "title": "test"} 1`] = `
@media (max-width: 600px) {
  .emotion-0.emotion-0 {
    display: none;
  }
}

.emotion-0 {
  padding: 0px 50px;
  position: relative;
  left: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  text-align: center;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-1 {
  font-weight: 400;
  font-size: 1.5em;
}

.emotion-3 {
  position: relative;
  left: 20px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 {
  text-align: center;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-4 {
  font-weight: 400;
  font-size: 1.25em;
}

.emotion-8 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 100px;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-8 {
  font-weight: 600;
  font-size: 1.25em;
}

.emotion-10 {
  text-align: start;
  font-style: italic;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 150px;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-10 {
  font-weight: 400;
  font-size: 0.875em;
}

<body>
  <div>
    <div
      style="width: 100vw; display: flex; justify-content: center; padding-top: 100px;"
    >
      <div
        class="emotion-0"
      >
        <h5
          class="emotion-1 emotion-2"
          color="#f3f3f3"
          id="heading5"
        >
          test
        </h5>
      </div>
      <div
        class="emotion-3"
        style="opacity: 0;"
      >
        <div
          style="position: relative; display: flex; min-height: 200px;"
        >
          <div
            style="display: flex; flex: 1; justify-content: center;"
          >
            <div
              style="background-color: rgb(240, 240, 240); width: 3.5px; height: 100%;"
            />
          </div>
          <div
            style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; display: flex;"
          >
            <div
              style="flex: 1; display: grid; justify-content: flex-end; align-items: flex-start; align-content: flex-start; color: rgb(243, 243, 243);"
            >
              <h6
                class="emotion-4 emotion-5"
                color="#f3f3f3"
                id="heading6"
              >
                2019
              </h6>
              <h6
                class="emotion-4 emotion-5"
                color="#f3f3f3"
                id="heading6"
              >
                2020
              </h6>
            </div>
            <div
              style="width: 25px; display: flex; flex-direction: column; justify-content: flex-start; margin: 0px 20px;"
            >
              <div
                style="height: 25px; border: 5px solid #f3f3f3; border-radius: 100%; background-color: rgb(0, 115, 157);"
              />
            </div>
            <div
              style="flex: 1; display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; color: rgb(243, 243, 243);"
            >
              <h6
                class="emotion-8 emotion-5"
                color="#f3f3f3"
                id="heading6"
                maxlength="100px"
              >
                test
              </h6>
              <div
                style="height: 0.4em;"
              />
              <p
                class="emotion-10 emotion-11"
                color="#f3f3f3"
                id="body2"
                maxlength="150px"
              >
                Lorem ipsum
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`IndexResumeContainer Create IndexResumeContainer with {"items": [Array], "title": "test"} 2`] = `
@media (max-width: 600px) {
  .emotion-0.emotion-0 {
    display: none;
  }
}

.emotion-0 {
  padding: 0px 50px;
  position: relative;
  left: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  text-align: center;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-1 {
  font-weight: 400;
  font-size: 1.5em;
}

.emotion-3 {
  position: relative;
  left: 20px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 {
  text-align: center;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-4 {
  font-weight: 400;
  font-size: 1.25em;
}

.emotion-8 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 100px;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-8 {
  font-weight: 600;
  font-size: 1.25em;
}

.emotion-10 {
  text-align: start;
  font-style: italic;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 150px;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-10 {
  font-weight: 400;
  font-size: 0.875em;
}

<body>
  <div>
    <div
      style="width: 100vw; display: flex; justify-content: center; padding-top: 100px;"
    >
      <div
        class="emotion-0"
      >
        <h5
          class="emotion-1 emotion-2"
          color="#f3f3f3"
          id="heading5"
        >
          test
        </h5>
      </div>
      <div
        class="emotion-3"
        style="opacity: 0;"
      >
        <div
          style="position: relative; display: flex; min-height: 200px;"
        >
          <div
            style="display: flex; flex: 1; justify-content: center;"
          >
            <div
              style="background-color: rgb(240, 240, 240); width: 3.5px; height: 100%;"
            />
          </div>
          <div
            style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; display: flex;"
          >
            <div
              style="flex: 1; display: grid; justify-content: flex-end; align-items: flex-start; align-content: flex-start; color: rgb(243, 243, 243);"
            >
              <h6
                class="emotion-4 emotion-5"
                color="#f3f3f3"
                id="heading6"
              >
                2019
              </h6>
              <h6
                class="emotion-4 emotion-5"
                color="#f3f3f3"
                id="heading6"
              >
                heute
              </h6>
            </div>
            <div
              style="width: 25px; display: flex; flex-direction: column; justify-content: flex-start; margin: 0px 20px;"
            >
              <div
                style="height: 25px; border: 5px solid #f3f3f3; border-radius: 100%; background-color: rgb(0, 115, 157);"
              />
            </div>
            <div
              style="flex: 1; display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; color: rgb(243, 243, 243);"
            >
              <h6
                class="emotion-8 emotion-5"
                color="#f3f3f3"
                id="heading6"
                maxlength="100px"
              >
                test
              </h6>
              <div
                style="height: 0.4em;"
              />
              <p
                class="emotion-10 emotion-11"
                color="#f3f3f3"
                id="body2"
                maxlength="150px"
              >
                Lorem ipsum
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`IndexResumeContainer Create IndexResumeContainer with {"items": [Array], "title": "test"} 3`] = `
@media (max-width: 600px) {
  .emotion-0.emotion-0 {
    display: none;
  }
}

.emotion-0 {
  padding: 0px 50px;
  position: relative;
  left: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  text-align: center;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-1 {
  font-weight: 400;
  font-size: 1.5em;
}

.emotion-3 {
  position: relative;
  left: 20px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 {
  text-align: center;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-4 {
  font-weight: 400;
  font-size: 1.25em;
}

.emotion-6 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 100px;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-6 {
  font-weight: 600;
  font-size: 1.25em;
}

.emotion-8 {
  text-align: start;
  font-style: italic;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 150px;
  letter-spacing: normal;
  word-spacing: normal;
  color: #f3f3f3;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-8 {
  font-weight: 400;
  font-size: 0.875em;
}

<body>
  <div>
    <div
      style="width: 100vw; display: flex; justify-content: center; padding-top: 100px;"
    >
      <div
        class="emotion-0"
      >
        <h5
          class="emotion-1 emotion-2"
          color="#f3f3f3"
          id="heading5"
        >
          test
        </h5>
      </div>
      <div
        class="emotion-3"
        style="opacity: 0;"
      >
        <div
          style="position: relative; display: flex; min-height: 200px;"
        >
          <div
            style="display: flex; flex: 1; justify-content: center;"
          >
            <div
              style="background-color: rgb(240, 240, 240); width: 3.5px; height: 100%;"
            />
          </div>
          <div
            style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; display: flex;"
          >
            <div
              style="flex: 1; display: grid; justify-content: flex-end; align-items: flex-start; align-content: flex-start; color: rgb(243, 243, 243);"
            >
              <h6
                class="emotion-4 emotion-5"
                color="#f3f3f3"
                id="heading6"
              >
                2020
              </h6>
            </div>
            <div
              style="width: 25px; display: flex; flex-direction: column; justify-content: flex-start; margin: 0px 20px;"
            >
              <div
                style="height: 25px; border: 5px solid #f3f3f3; border-radius: 100%; background-color: rgb(0, 115, 157);"
              />
            </div>
            <div
              style="flex: 1; display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; color: rgb(243, 243, 243);"
            >
              <h6
                class="emotion-6 emotion-5"
                color="#f3f3f3"
                id="heading6"
                maxlength="100px"
              >
                test
              </h6>
              <div
                style="height: 0.4em;"
              />
              <p
                class="emotion-8 emotion-9"
                color="#f3f3f3"
                id="body2"
                maxlength="150px"
              >
                Lorem ipsum
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
